@@ -63,6 +63,7 @@ import java.awt.event.MouseWheelListener;
 import java.awt.geom.AffineTransform;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -95,6 +96,9 @@ import javax.swing.plaf.basic.BasicInternalFrameUI;
 
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.LogManager;
+import org.contikios.cooja.plugins.skins.DGRMVisualizerSkin;
+import org.contikios.cooja.plugins.skins.LogisticLossVisualizerSkin;
+import org.contikios.mrm.MRMVisualizerSkin;
 import org.jdom.Element;
 
 import org.contikios.cooja.ClassDescription;
@@ -696,11 +700,11 @@ public class Visualizer extends VisPlugin implements HasQuickHelp {
 
     /* Create and activate new skin */
     try {
-      VisualizerSkin newSkin = skinClass.newInstance();
+      VisualizerSkin newSkin = skinClass.getDeclaredConstructor().newInstance();
       newSkin.setActive(Visualizer.this.simulation, Visualizer.this);
       currentSkins.add(0, newSkin);
     }
-    catch (InstantiationException | IllegalAccessException e1) {
+    catch (InvocationTargetException | NoSuchMethodException | InstantiationException | IllegalAccessException e1) {
       e1.printStackTrace();
     }
     repaint();
@@ -713,7 +717,14 @@ public class Visualizer extends VisPlugin implements HasQuickHelp {
       return;
     }
 
-    /* Activate default skins */
+    // Activate default skins.
+    generateAndActivateSkin(IDVisualizerSkin.class);
+    generateAndActivateSkin(GridVisualizerSkin.class);
+    generateAndActivateSkin(DGRMVisualizerSkin.class);
+    generateAndActivateSkin(TrafficVisualizerSkin.class);
+    generateAndActivateSkin(UDGMVisualizerSkin.class);
+    generateAndActivateSkin(LogisticLossVisualizerSkin.class);
+    generateAndActivateSkin(MRMVisualizerSkin.class);
     String[] defaultSkins = Cooja.getExternalToolsSetting("VISUALIZER_DEFAULT_SKINS", "").split(";");
     for (String skin : defaultSkins) {
       if (skin.isEmpty()) {
@@ -791,7 +802,7 @@ public class Visualizer extends VisPlugin implements HasQuickHelp {
         menu.add(simulation.getCooja().createMotePluginsSubmenu(mote));
         for (Class<? extends MoteMenuAction> menuActionClass : moteMenuActions) {
           try {
-            final MoteMenuAction menuAction = menuActionClass.newInstance();
+            final MoteMenuAction menuAction = menuActionClass.getDeclaredConstructor().newInstance();
             if (menuAction.isEnabled(this, mote)) {
               JMenuItem menuItem = new JMenuItem(menuAction.getDescription(this, mote));
               menuItem.addActionListener(new ActionListener() {
@@ -803,7 +814,8 @@ public class Visualizer extends VisPlugin implements HasQuickHelp {
               menu.add(menuItem);
             }
           }
-          catch (InstantiationException | IllegalAccessException e1) {
+          catch (InvocationTargetException | NoSuchMethodException | InstantiationException |
+                 IllegalAccessException e1) {
             logger.fatal("Error: " + e1.getMessage(), e1);
           }
         }
@@ -814,7 +826,7 @@ public class Visualizer extends VisPlugin implements HasQuickHelp {
     menu.add(new JSeparator());
     for (Class<? extends SimulationMenuAction> menuActionClass : simulationMenuActions) {
       try {
-        final SimulationMenuAction menuAction = menuActionClass.newInstance();
+        final SimulationMenuAction menuAction = menuActionClass.getDeclaredConstructor().newInstance();
         if (menuAction.isEnabled(this, simulation)) {
           JMenuItem menuItem = new JMenuItem(menuAction.getDescription(this, simulation));
           menuItem.addActionListener(new ActionListener() {
@@ -826,7 +838,7 @@ public class Visualizer extends VisPlugin implements HasQuickHelp {
           menu.add(menuItem);
         }
       }
-      catch (InstantiationException | IllegalAccessException e1) {
+      catch (InvocationTargetException | NoSuchMethodException | InstantiationException | IllegalAccessException e1) {
         logger.fatal("Error: " + e1.getMessage(), e1);
       }
     }
